--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.activemq.broker-url=tcp://192.168.241.130:61616
 #如果是点对点（queue），那么此处默认应该是false，如果发布订阅，那么一定设置为true
 spring.jms.pub-sub-domain=true
+#设置持久化
+spring.jms.template.delivery-mode=persistent
